# Languages_Compilers_Interpreters

Mini_tyfun/: app.mtfun  dune-project  try.mtfun
Mini_tyfun/Mini_fun/lib/: Mini_fun.ml  dune
Mini_tyfun/Mini_fun/test/: dune
Mini_tyfun/Mini_tyfun/: fib.mtfun
Mini_tyfun/Mini_tyfun/lib/: Mini_tyfun.ml  Mini_tyfun.mli  Mini_tyfun_Interpreter.ml  Mini_tyfun_Lexer.mll  Mini_tyfun_Parser.mly  dune
Mini_tyfun/Mini_tyfun/test/: dune  test_Mini_tyfun.ml
Mini_tyfun/Mini_tyfun/test/programs/: 02_constant.mtfun  03_double.mtfun  04_square.mtfun  07_negate.mtfun  11_let_binding.mtfun  13_bool_let.mtfun  15_not_expr.mtfun  22_countdown.mtfun  24_curried_multiply.mtfun  27_apply_twice.mtfun  28_higher_order_apply.mtfun  30_conditional_select.mtfun  32_multi_letfun.mtfun  35_gcd.mtfun  app.mtfun
Mini_tyfun/Mini_tyfun/test/tests/: 06_decrement.mtfun  08_abs_value.mtfun  09_clamp_zero.mtfun  12_nested_let.mtfun  14_quadratic.mtfun  17_factorial.mtfun  21_sum_step2.mtfun  25_min_hundred.mtfun  (+4 more)
Mini_tyfun/_build/: .db  .digest-db  log
Mini_tyfun/_build/default/: META.Mini_fun  Mini_fun.dune-package  Mini_fun.install  Mini_tyfun.dune-package  Mini_tyfun.install  Mini_tyfun.opam
Mini_tyfun/lib/: Mini_fun.mli  Mini_tyfun.ml  Mini_tyfun.mli  Mini_tyfun_Lexer.mll  Mini_tyfun_Parser.mly  dune
Mini_tyfun/mtfun/: try.mtfun
Mini_tyfun/test/: dune  test_Mini_tyfun.ml
Mini_tyfun/test/tests/: 03_double.mtfun  04_square.mtfun  10_sign.mtfun  16_sum_naturals.mtfun  18_fibonacci.mtfun  19_power_of_two.mtfun  20_sum_squares.mtfun  23_curried_add.mtfun  33_ackermann.mtfun
(+459 files in other folders)
